@startuml
package EleFitsData {

class Record<T> {
+ keyword : string
+ value : T
+ unit : string
+ comment : comment
}

abstract class Raster<T> {
+ shape : long...
+ size() : long
+ at(long...) : T
+ data() : T*
}

}

package EleFits {

class FitsFile {
+ open(string)
+ close()
}

class SifFile {
+ header() : Header
+ array() : ImageRaster
+ readRaster() : Raster
+ writeRaster(Raster)
+ verifyChecksums()
+ updateChecksums()
}

class Header {
+ readAll() : string
+ parse(string) : Record
+ write(Record)
+ parseSeq(string...) : Record...
+ writeSeq(Record...)
}

class ImageRaster {
+ readRaster() : Raster
+ writeRaster(Raster)
}

}

FitsFile <|-- SifFile
SifFile *-- Header
SifFile *-- ImageRaster
Header -- Record
ImageRaster -- Raster

Record -[hidden]right- Raster
@enduml